--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,8 @@
 Django==2.2.7
+django-cors-headers==3.2.0
+django-filter==2.2.0
 djangorestframework_gis==0.14
 djangorestframework==3.10.3
+psycopg2==2.8.4
 PyJWT==1.7.1
 python_magic==0.4.15
