--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,6 @@
 Django==2.2.7
 django-cors-headers==3.2.0
+django-countries==5.5
 django-filter==2.2.0
 djangorestframework_gis==0.14
 djangorestframework==3.10.3
